# client-accounting-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: testing.yml
docs/src/: client_accounting.puml
src/: app.rs  lib.rs  main.rs
src/app/: importer.rs
src/app/model/: mod.rs  transaction.rs
src/model/: account.rs  mod.rs  transaction.rs
tests/: integration_test.rs  security_tests.rs
