[package]
name = "client-accounting"
version = "0.1.0"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.41", features = ["derive"] }
csv = "1.1"
