[package]
name = "client_accounting"
version = "0.1.0"
authors = ["Bodo Hugo Barwich <b.barwich@hotmail.com>"]
edition = "2018"

[[bin]]
name = "client-accounting"
path = "src/main.rs"

[lib]
name = "client_accounting"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_derive = "1.0.106"
csv = "1.1"
